--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">Gallery Task</string>
+    <string name="app_name">My Gallery</string>
+
+    <!--Home Screen-->
+    <string name="profile">Profile</string>
+    <string name="my_albums">My Albums</string>
+
+    <!--Album Screen-->
+    <string name="search_in_images">Search in images..</string>
+    <string name="photo_not_found">No Photo Found For That Title</string>
+
+    <!--Photo Screen-->
+    <string name="share_img">Share Image</string>
+
+    <!--Error-->
+    <string name="reload">Reload</string>
+    <string name="retry">Retry</string>
 </resources>
